background styling changes

--- a/solution-challenge-team-finder-react/public/index.html
+++ b/solution-challenge-team-finder-react/public/index.html
@@ -50,7 +50,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer style="position: fixed; bottom: 0; left: 0; right: 0; text-align: center; background-color: #a5fba5;">
+  <footer style="position: fixed; bottom: 0; left: 0; right: 0; text-align: center; background-color: #292b2c; color: white">
     <p>Made by <a href="https://twitter.com/ericthestein">Eric Stein</a> at <a href="https://www.virginia.edu/">UVA</a> | <a href="https://github.com/Ericthestein/solution-challenge-team-finder">Source Code</a> | <a href="https://dsc.community.dev/university-of-virginia/">Join our Google DSC Chapter!</a></p>
   </footer>
 </html>
